force-app/main/default/objects/Employee_Benefit__c/Employee_Benefit__c.object-meta.xml
<CustomObject>
    <label>Employee Benefit</label>
    <nameField>
        <label>Employee Benefit  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>