force-app/main/default/objects/Employee_Benefit__c/fields/Annual_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Annual_Deductible__c</fullName>
    <label>Annual Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>