force-app/main/default/objects/Employee_Benefit__c/fields/Benefit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Plan</label>
    <referenceTo>Benefit_Plan__c</referenceTo>
    <relationshipLabel>Employee Benefits</relationshipLabel>
    <relationshipName>Employee_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>