force-app/main/default/objects/Employee_Benefit__c/fields/Coverage_Level__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Level__c</fullName>
    <label>Coverage Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee Only</fullName>
            </value>
            <value>
                <fullName>Employee + Spouse</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>