force-app/main/default/objects/Employee_Benefit__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Employee Benefits</relationshipLabel>
    <relationshipName>Employee_Benefits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>